Fixed Jquery, added footer, fixed z-index

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -29,6 +29,7 @@ nav {
   position: fixed;
   padding: 25px;
   background-color: #3dd0ac;
+  z-index: 2;
     }
 
 button {
@@ -56,7 +57,7 @@ color: gray;
   font-family: 'Josefin Slab', serif;
   font-size: 25px;
   padding: 25px;
-  z-index: 2;
+  z-index: 3;
 }
 
 #brackets a{
@@ -75,6 +76,7 @@ color: gray;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  z-index: 1;
   -webkit-animation: fadein 5s; /* Safari, Chrome and Opera > 12.1 */
   }
 
@@ -88,6 +90,14 @@ color: gray;
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 100px;
+}
+
+footer {
+  text-align: center;
+  background-color: lightgrey;
+  font-size: 12px;
+  color: 	#585858;
+  padding: 25px;
 }
 
 /******* Home page styles ******/
@@ -244,7 +254,7 @@ padding-bottom: 50px;
 
 }
 
-@media (min-width: 700px) and (orientation: landscape) {
+@media (max-width: 700px) and (orientation: landscape) {
   #brackets {
     font-size: 35px;
     display: block;
@@ -266,6 +276,7 @@ padding-bottom: 50px;
     box-sizing: border-box;
     display: inline-block;
     margin-right: 20px;
+    z-index: 1;
   }
 
 }
